Revision history for Mojo-IRC

0.16
       * Add disconnect() can be called without a callback
         Contributor: Dan Book
       * Fix "close" event can reconnect
         Contributor: Dan Book

0.15     Fri Jan  9 16:19:34 2015
       * More robust unit tests

0.14     Fri Jan  2 13:31:11 2015
       * Fix failing test on BSD

0.13     Sun Sep 14 20:16:25 2014
       * emit_safe() is deprecated in Mojolicious

0.12     Sat Sep  6 19:25:13 2014
       * Skip tests on MSWin32 #9

0.11     Sun Aug 31 14:32:11 2014
       * Fix update of current nick() on err_nicknameinuse()

0.10     Sat Aug 16 20:24:25 2014
       * Fix update of current nick()
       * Deprecated change_nick()

0.09     Tue Jul 29 08:43:34 2014
       * Fix emitting err_xxx events before irc_error

0.08     Sun Jul 27 19:06:53 2014
       * Will also emit numeric events
       * Move events out of main module documentation
       * Deprecated irc_err_xxx events

0.07     Fri May 30 07:46:58 2014
       * Fix Mojo::IRC for Mojolicious 5.0

0.0601   Sat Feb 22 17:43:57 2014
       * Fix missing ERR_ events.
       * Started DEPRECATION process for irc_err_xxx events.

0.06     Sat Feb 22 11:54:38 2014
       * Allow offline mode with MOJO_IRC_OFFLINE=1

0.0501   Sat Feb 22 09:57:25 2014
       * Add debug info to figure out failing error.t
         http://www.cpantesters.org/cpan/report/3758769c-6bf4-1014-9dd5-8faa6c3f6a79

0.05     Fri Feb 21 20:52:39 2014
       * Add parser() attribute
       * Add ctcp() method to quote CTCP messages
       * Add support for CTCP events

0.04     Fri Feb 21 18:23:16 2014
       * Fix PASS need to be sent before NICK and USER
         http://www.irchelp.org/irchelp/rfc/chapter4.html#c4_1_1
         Contributor: Stephan Jauernick

0.0303   Tue Oct  1 12:23:30 2013
       * Fix irc_err_nicknameinuse: Need to try with same nick, not modify
         the nick attribute.
       * Marked change_nick() as deprecated.

0.0302   Fri Sep  6 23:40:46 2013