@@ -1,14 +1,11 @@
+BEGIN {
+  *Mojo::IRC::localtime = sub {'Fri Feb 21 19:35:24 2014'}
+}
 use t::Helper;
 
-{
-  *Mojo::IRC::localtime = sub    {'Fri Feb 21 19:35:24 2014'};
-  *Mojo::IRC::time      = sub () {1393007663};
-  require Mojo::IRC;
-}
-
-my $port = generate_port();
-my $irc  = Mojo::IRC->new(nick => "ctcpman", user => "u1", server => "127.0.0.1:$port");
-my $read = '';
+my $port        = generate_port();
+my $irc         = Mojo::IRC->new(nick => "mojo_irc", user => "u1", server => "127.0.0.1:$port");
+my $server_read = '';
 
 Mojo::IOLoop->server(
   {port => $port},
@@ -18,34 +15,37 @@ Mojo::IOLoop->server(
     $stream->on(
       read => sub {
         my ($stream, $data) = @_;
-        $read .= $data;
-        Mojo::IOLoop->stop if $read =~ /VERSION/;
+        $server_read .= $data;
+        Mojo::IOLoop->stop if $server_read =~ /VERSION/;
       }
     );
 
-    $stream->write(":abc-123 PRIVMSG #channel :\x{1}ACTION msg1\x{1}\r\n");
-    $stream->write(":abc-123 PRIVMSG ctcpman :\x{1}PING 1393007660\x{1}\r\n");
-    $stream->write(":abc-123 PRIVMSG ctcpman :\x{1}TIME\x{1}\r\n");
-    $stream->write(":abc-123 PRIVMSG ctcpman :\x{1}VERSION\x{1}\r\n");
+    $stream->write(":other_client!u2\@other.example.com PRIVMSG #channel :\x{1}ACTION msg1\x{1}\r\n");
+    $stream->write(":other_client!u2\@other.example.com PRIVMSG mojo_irc :\x{1}PING 1393007660\x{1}\r\n");
+    $stream->write(":other_client!u2\@other.example.com PRIVMSG mojo_irc :\x{1}TIME\x{1}\r\n");
+    $stream->write(":other_client!u2\@other.example.com PRIVMSG mojo_irc :\x{1}VERSION\x{1}\r\n");
   },
 );
 
 $irc->parser(Parse::IRC->new(ctcp => 1));
 
-my $action;
-$irc->on(ctcp_action => sub { $action = $_[1]; });
-$irc->connect(sub { diag $_[1] || 'Connected'; });
+my ($err, $ctcp_action_message);
+$irc->on(ctcp_action => sub { $ctcp_action_message = $_[1]; });
+$irc->connect(sub { $err = $_[1] });
 start_ioloop();
+is $err, '', 'no error on connect';
 
-delete $action->{raw_line};
-is_deeply($action, {command => 'CTCP_ACTION', params => [qw( #channel msg1 )], prefix => 'abc-123',}, 'CTCP ACTION',);
+delete $ctcp_action_message->{raw_line};
+is_deeply($ctcp_action_message,
+  {command => 'CTCP_ACTION', params => [qw( #channel msg1 )], prefix => 'other_client!u2@other.example.com'},
+  'CTCP ACTION');
 
-is $read, <<"HERE", "got correct response from client";
-NICK ctcpman\r
+is $server_read, <<"HERE", "got correct response from mojo_irc";
+NICK mojo_irc\r
 USER u1 8 * :Mojo IRC\r
-NOTICE ctcpman :\001Ping reply from ctcpman: 3 second(s)\001\r
-NOTICE ctcpman :\001TIME Fri Feb 21 19:35:24 2014\001\r
-NOTICE ctcpman :\001VERSION Mojo-IRC $Mojo::IRC::VERSION\001\r
+NOTICE other_client :\001PING 1393007660\001\r
+NOTICE other_client :\001TIME Fri Feb 21 19:35:24 2014\001\r
+NOTICE other_client :\001VERSION Mojo-IRC $Mojo::IRC::VERSION\001\r
 HERE
 
 done_testing;
